fetching profile name and image for interested posts. Using MobX , set up a way to refactor commentWithPosts component. Console warning for Links fixed. Interested posts page fetching and dynamically displaying data. CSS changes for better readablility.
to do list updated. notes placed throughout component for next steps success.

--- a/client/src/Components/Post/style.css
+++ b/client/src/Components/Post/style.css
@@ -68,7 +68,8 @@ div.requestBoxBottomBar {
 }
 .requestBoxBottomBarInfo {
   opacity: 0.7;
-  font-size: 0.5rem;
+  font-size: 0.7rem;
+  padding: 6px 0 6px 0;
 }
 img.commentProfileImage {
   max-width: 40px;
